# mxl-relm4-components

./: .gitignore  .gitmodules  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml  icons.toml  justfile  mxl-env.py  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: check.yml
.github/workflows/mxl-setup/: action.yml
docker/: Dockerfile
en/: mxl_relm4_components.ftl
i18n/en/: mxl_relm4_components.ftl
src/: gtk.rs  lib.rs  localization.rs  misc.rs
src/create_report_dialog/: messages.rs  mod.rs  model.rs  widget.rs
src/problem_report_dialog/: messages.rs  model.rs  widget.rs
src/third_party_licenses_dialog/: factory_licenses.rs  factory_packages.rs  helper.rs  messages.rs  mod.rs  model.rs  widget.rs
