[package]
name = "mxl-relm4-components"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
const_format = "0.2"
relm4 = { version = "=0.7.0-rc.1", features = [
    "macros",
    "libadwaita",
    "gnome_44",
] }
relm4-components = "=0.7.0-rc.1"
relm4-icons = { version = "0.7.0-alpha.2", default-features = false, optional = true }
mxl-base = { git = "https://github.com/x-software-com/mxl-base.git", tag = "v0.1.0", optional = true }
urlencoding = { version = "2", default-features = false, optional = true }

# Internationalization:
i18n-embed-fl = { version = "0.8" }
once_cell = { version = "1" }
rust-embed = { version = "8", features = ["debug-embed"] }
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }

[features]
create_report_dialog = [
    "dep:mxl-base",
    "relm4-icons/right-large",
    "dep:urlencoding",
]
problem_report_dialog = [
    "dep:mxl-base",
    "relm4-icons/right-large",
    "relm4-icons/left-large",
    "dep:urlencoding",
]
