[package]
name = "mxl-relm4-components"
version = "0.1.3"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/x-software-com/mxl-relm4-components/"
description = "This is a component of the X-Software MXL product line"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
const_format = "0.2"
relm4 = { version = "=0.7.0-rc.1", features = [
    "macros",
    "libadwaita",
    "gnome_44",
] }
relm4-components = "=0.7.0-rc.1"
relm4-icons = { version = "0.7.0-alpha.2", default-features = false, optional = true }
mithra = { git = "https://github.com/x-software-com/mithra.git", tag = "v0.1.0", optional = true }

# Internationalization:
i18n-embed-fl = { version = "0.8" }
once_cell = { version = "1" }
rust-embed = { version = "8", features = ["debug-embed"] }
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }

[features]
third_party_licenses_dialog = ["dep:mithra", "relm4-icons/warning"]
